# django_p35

./: Makefile  README.md  pyproject.toml
apps/: admin.py  froms.py  managers.py  models.py  urls.py  views.py
apps/templatetags/: custom_tags.py
templates/apps/: base.html  product-detail.html  product-list.html
templates/apps/auth/: login.html  profile.html  register.html
