[project]
name = "django-p35"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "django>=5.2.8",
    "django-ckeditor-5==0.2.18",
    "django-jazzmin>=3.0.1",
    "django-jsonform>=2.23.2",
    "django-unfold==1.0.0",
    "flake8>=7.3.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests==2.32.5",
]
